--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "run:dev": "nodemon main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^11.1.0",
+    "inquirer": "^9.2.12",
     "loadash": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
